@@ -90,13 +90,6 @@ allprojects {
 }
 
 loom {
-    runs {
-        named("client") {
-            vmArg("-Xms4G")
-            vmArg("-Xmx4G")
-            vmArg("-XX:+UseZGC")
-        }
-    }
     accessWidenerPath = file("src/main/resources/liquidbounce.accesswidener")
 }
 
